--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,16 @@
-{}
+{
+  "hosting": {
+    "public": "dist/krastevs-gym-angular",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
